k8s/daemonset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gunicorn-daemonset-service
  labels:
    app: gunicorn-prometheus-exporter
    component: daemonset
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: gunicorn-prometheus-exporter
    component: daemonset
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: metrics
      port: 9091
      targetPort: 9091
      protocol: TCP
