k8s/gunicorn-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gunicorn-metrics-service
  labels:
    app: gunicorn-app
    component: metrics
spec:
  type: ClusterIP
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
      name: metrics
  selector:
    app: gunicorn-app
