k8s/prometheus-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-netpol
  labels:
    app: prometheus
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
    - Ingress
  ingress:
    # Allow Grafana to query metrics
    - from:
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 9090
    # Allow Prometheus to scrape gunicorn metrics (actually gunicorn connects to Prometheus)
    - from:
        - podSelector:
            matchLabels:
              app: gunicorn-app
      ports:
        - protocol: TCP
          port: 9090
